--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "description": "Translate URIs between WSL and Windows",
   "main": "src/index.ts",
+  "license": "MIT",
+  "repository": {
+    "type": "GitHub",
+    "url": "https://github.com/yisonPylkita/wslpath.ts"
+  },
   "private": false,
   "scripts": {
     "unit": "mocha --require ts-node/register test/**/*.ts",
@@ -10,6 +15,8 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "node": "^10.15.0",
+    "@types/node": "10.12.23",
     "typescript": "3.3.3",
     "ts-node": "8.0.2",
     "mocha": "5.2.0",
